examples/test/testpolicy1495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1495
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key12: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value25
      podSelector:
        matchLabels:
          key20: value16
          key21: value41
          key39: value30
